-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.0, 5.9
-
macOS
-
23bd021e6 (134-based-refactor)
When the online status changes then it does not trigger any event listeners in JS in a webpage that are listening for this status. When loading the attached html inside the demobrowser it will start off correctly by indicating that it is online. When you disconnect the connection (for example by turning off the wifi) then it will not update the page to state the offline time. Doing the same with Chrome shows it working fine.
- relates to
-
QTBUG-51961 QTimer does not work in a thread with CoreFoundation event dispatcher
-
- Closed
-