Use default MessageLoop type for NetworkConfigWatcherMac thread

This ensures that the NetworkChangeNotifierMac::ReachabilityCallback
is actually called from the native CoreFoundation event loop. This
was not the case before because WebEngine overrides the TYPE_UI
message loop with a QEventDispatcherUNIX, which does not integrate
a CoreFoundation loop within, thus never calling the respective
callback.

Task-number: QTBUG-61364
Change-Id: Id07bb46dfeb114e4b434acebb93c07d338bb3d1f
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>